tests/ui/async-await/partial-drop-partial-reinit.stderr
error: future cannot be sent between threads safely
  --> $DIR/partial-drop-partial-reinit.rs:6:16
   |
LL |     gimme_send(foo());
   |                ^^^^^ future returned by `foo` is not `Send`
   |
help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `NotSend`
  --> $DIR/partial-drop-partial-reinit.rs:17:1
   |
LL | struct NotSend {}
   | ^^^^^^^^^^^^^^
note: future is not `Send` as this value is used across an await
  --> $DIR/partial-drop-partial-reinit.rs:31:11
   |
LL |     let mut x = (NotSend {},);
   |         ----- has type `UnsafePinned<(NotSend,)>` which is not `Send`
...
LL |     bar().await;
   |           ^^^^^ await occurs here, with `mut x` maybe used later
note: required by a bound in `gimme_send`
  --> $DIR/partial-drop-partial-reinit.rs:11:18
   |
LL | fn gimme_send<T: Send>(t: T) {
   |                  ^^^^ required by this bound in `gimme_send`

error: aborting due to 1 previous error

